使启动脚本可以在linux上面运行